add a library specific error enum

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ license = "MIT/Apache-2.0"
 description = "SOEHNLE Terminal 3005 library"
 homepage = "https://github.com/slowtec/soehnle-t3005"
 repository = "https://github.com/slowtec/soehnle-t3005"
+edition = "2018"
 
 [dependencies]
